# dimos

./: .codecov.yml  .coveragerc.toml  .daneel-test.md  .dockerignore  .editorconfig  .envrc.humble  .gitattributes  .gitignore  .gitmodules  .lfsconfig  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  AGENTS.zh-CN.md  AI_POLICY.md  CLA.md  CLA.zh-CN.md  CONTEXT.md  CONTRIBUTING.md  Caddyfile  DEPLOY.md  DROP_IN_GUIDE_README.md  Dockerfile.g1-sim  FEATURE_PROPOSAL_EMAIL.md  HACKATHON.md  HARDENING_PLAN.md  IDEAS.md  INTERGRATION_TEST_README.md  INVESTIGATION_LOG.md  MANIFEST.in  MUJOCO_LOG.TXT  Makefile  NEWREADME.MD  PROJECT_CHANGELOG.md  PR_DESCRIPTION.md  PR_DRAFT.html  PR_DRAFT.md  READING_GUIDE.md  README-dimos-distro.md  README.md  (+60 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
app/: .env.example  .gitignore  DEPLOY.md  README.md  config.py  main.py  package.json  requirements.txt  tsconfig.base.json
assets/: drop_in_guide_slides.html  foxglove_unitree_lcm_dashboard.json
autoresearch/: GUIDELINES.md  optimizations.py  program.md
config/: mcporter.json
data/: command_center.html  rooms.yaml
dead_code_filder/: README.md  analysis.json  code_scanner.py  import_structure.json  index.html  scanner.py  test.html  tsconfig.json  vite.config.ts
dimensional-hackathon/: README.md  config.yaml  requirements.txt  run.sh
dimos/: api.py  conftest.py  constants.py  test_no_sections.py  touch.py
dimos/mapping/native_costmapper/rust/: Cargo.toml
dimos/mapping/native_costmapper/rust/src/: costmapper.rs  lib.rs  main.rs  python.rs
dimos/mapping/ray_tracing/rust/: Cargo.toml  flake.nix
dimos/mapping/ray_tracing/rust/src/: lib.rs  main.rs  python.rs  voxel_map.rs  voxel_ray_tracer.rs
dimos/mapping/rust/: Cargo.toml
dimos/mapping/rust/src/: cloud.rs  lib.rs  occupancy.rs  voxel_grid.rs
dimos/mapping/rust/tests/: golden.rs
dimos/robot/deeprobotics/m20/docker/drdds_bridge/: CMakeLists.txt  build_host.sh  build_nav_cmd_pub.sh  drdds-bridge.service  package.xml
dimos/robot/deeprobotics/m20/docker/drdds_bridge/config/: ros2_pub_fastdds.xml
dimos/robot/deeprobotics/m20/docker/drdds_bridge/include/: shm_transport.h
dimos/robot/deeprobotics/m20/docker/drdds_bridge/launch/: bridge.launch.py
dimos/robot/deeprobotics/m20/docker/drdds_bridge/src/: drdds_recv.cpp  nav_cmd_bridge.cpp  nav_cmd_publisher.cpp  nav_cmd_rclpy_bridge.py  ros2_pub.cpp  test_nav_cmd_rclpy_bridge.py
dimos/robot/deeprobotics/m20/docker/drdds_msgs/: CMakeLists.txt  package.xml
dimos/robot/deeprobotics/m20/docker/drdds_msgs/msg/: GaitValue.msg  MetaType.msg  MotionInfo.msg  MotionInfoValue.msg  MotionStatus.msg  MotionStatusValue.msg  NavCmd.msg  NavCmdValue.msg
dimos/robot/deeprobotics/m20/drdds_bridge/cpp/: CMakeLists.txt  airy_imu_bridge.cpp  drdds_probe.cpp  drdds_recv.cpp  fastdds_pc2_probe.cpp  flake.nix  main.cpp  nav_cmd_pub.cpp
dimos/robot/deeprobotics/m20/drdds_bridge/cpp/include/: shm_transport.h
dimos/robot/deeprobotics/m20/nav/map_save/cpp/: CMakeLists.txt  main.cpp
dimos/robot/deeprobotics/m20/nav/upsample_ground/cpp/: CMakeLists.txt  main.cpp  test_timestamp_synchronizer.cpp  timestamp_synchronizer.hpp
dimos/web/dimoscope/gateway/wt-sidecar/: Cargo.toml  README.md
dimos/web/dimoscope/gateway/wt-sidecar/src/: cert.rs  main.rs  outbox.rs  pipe.rs  rtc.rs  session.rs
dimos_rs/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  rust-toolchain.toml
dimos_rs/src/: lib.rs
dimos_rs/src/core/: colors.rs  mod.rs  transport.rs
dimos_rs/src/protocol/: mod.rs
dimos_rs/src/protocol/pubsub/: spec.rs
dimos_rs/src/protocol/service/: lcmservice.rs  mod.rs
dimwizard/: pyproject.toml
dimwizard/dimwizard/: __main__.py  advertise.py  cli.py  install.py  setup.py
docs/: README.md  SUMMARY.md  api.rst  capabilities.rst  ci-gate-test.md  ci.md  coding-agents.rst  conf.py  development.md  development.rst  docs.json  getting-started.rst  hooks.py  how-to-add-new-manipulator.md  index.md  index.rst  installation.rst  introduction.mdx  manipulation_architecture.md  manipulation_pipeline_quick_reference.md  modules.md  platforms.rst  quickstart.md  quickstart.mdx  requirements.md  spelling_wordlist.txt  testing_stream_reply.md  transport_summary.md  usage.rst
examples/: fakesensors.py  go2_person_aware_walk.py  go2_walk_backward.py  go2_walk_forward.py  modular_unitree_go2_example.py
examples/native-modules/rust/: Cargo.toml
examples/native-modules/rust/src/: lib.rs  native_ping.rs  native_pong.rs  ping.rs  pong.rs  tf_broadcaster.rs  tf_listener.rs  zenoh_ping.rs  zenoh_pong.rs
installer/: Dockerfile  installer.pyz.REMOVED.git-id  main.js  requirements.txt
installer_support/: core_dependencies.js  misc.ts  venv.js
journal/: 2026-05-27-camera-audio-bridges.md  2026-05-27-mlxvlm-robot-integration-prompt.md
learn/: LEARNINGS.md
misc/: go2_cmd_cli.py
native/cpp/: CMakeLists.txt
native/cpp/include/dimos/: native.hpp
native/cpp/include/dimos/native/: config.hpp  log.hpp  transport.hpp  transport_selection.hpp
native/cpp/tests/: CMakeLists.txt  test_config.cpp  test_log.cpp
native/rust/dimos-native-module/: Cargo.toml
native/rust/dimos-native-module/src/: lib.rs  module.rs
ogl_viewer/: viewer.py
plans/: memory3.md
raul1203/: README.md
research/: 01-dimos-codebase-map.md  02-go2-ecosystem-landscape.md  03-hackathon-winning-playbook.md
ros_docker_integration/: ros_launch_wrapper.py
scripts/: demo_lidar_floorplan.py  demo_rrd_3d_model.py  dogops_go2_preflight.sh  eval_optical_flow_gated.py  export_recording.py  g1_replay.py  g1_sim_smoke.sh  generate_docker_matrix.py  install.sh  keyboard_base.py  lidar_stereo_benchmark.py  m20_nav_launch_with_memlog.sh  m20_path_smoothing_benchmark.py  plot_rerun_latency.py  plot_trajectory_control_ticks.py  rpc_add_floor.py  rpc_reset.py  run-blueprint.sh  run_docker_workflow.sh  run_inference.py  run_memory_browser.py  run_on_video.py  simulate_trajectory_controller.py  stereo_rerun.py  test_simulate_trajectory_controller.py  verify.sh  (+1 more)
tests/: run.py  (+53 more)
(+5289 files in other folders)
