[build-system]
requires = ["setuptools>=70", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["dimos*"]
exclude = ["dimos.web.websocket_vis.node_modules*"]

[tool.setuptools.package-data]
"dimos" = ["*.html", "*.css", "*.js", "*.json", "*.txt", "*.yaml", "*.yml"]
"dimos.utils.cli" = ["*.tcss"]
"dimos.robot.unitree.go2" = ["*.urdf"]
"dimos.robot.unitree_webrtc.params" = ["*.yaml", "*.yml"]
"dimos.web.templates" = ["*"]
"dimos.rxpy_backpressure" = ["*.txt"]

[project]
name = "dimos"
version = "0.0.11"
description = "Powering agentive generalist robotics"
requires-python = ">=3.10"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache-2.0"}

authors = [
    {name = "Dimensional Team", email = "build@dimensionalOS.com"},
]

keywords = ["robotics", "ros", "agents", "dimos", "dimensional", "humanoid"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

# -----------------------
# Core Dependencies (always installed)
# -----------------------
dependencies = [
    "dimos-lcm",
    "numpy>=1.26.4",
    "scipy>=1.15.1",
    "pin>=3.3.0",
    "reactivex",
    "sortedcontainers==2.4.0",
    "pydantic",
    "python-dotenv",
    "annotation-protocol>=1.4.0",
    "lazy_loader",
    "plum-dispatch==2.5.7",

    # Logging
    "structlog>=25.5.0,<26",
    "colorlog==6.9.0",

    # Core IO
    "opencv-python",
    "open3d-unofficial-arm; platform_system == 'Linux' and platform_machine == 'aarch64'",
    "open3d>=0.18.0; platform_system != 'Linux' or platform_machine != 'aarch64'",
    # CLI
    "pydantic-settings>=2.11.0,<3",
    "textual==3.7.1",
    "typer>=0.19.2,<1",

    # Compute
    "numba>=0.60.0",
    "llvmlite>=0.42.0",

    # Runtime tools
    "rerun-sdk>=0.20.0",
    "dimos-viewer>=0.30.0a2",
    "protobuf>=6.33.5,<7",
    "psutil>=7.0.0",
    "lz4>=4.4.5",
]

# -----------------------
# CLI Entry Points
# -----------------------
[project.scripts]
dimos = "dimos.robot.cli.dimos:main"
agentspy = "dimos.utils.cli.agentspy.agentspy:main"
foxglove-bridge = "dimos.utils.cli.foxglove_bridge.run_foxglove_bridge:main"
rerun-bridge = "dimos.visualization.rerun.bridge:app"

# -----------------------
# Optional Dependencies (Extras)
# -----------------------
[project.optional-dependencies]

# 🔹 Lightweight core extension
core = [
    "dimos[sim,visualization]"
]

# 🔹 Simulation (~lightweight)
sim = [
    "mujoco>=3.3.4",
    "pygame>=2.6.1",
]

# 🔹 Visualization
visualization = [
    "rerun-sdk>=0.20.0",
    "dimos-viewer>=0.30.0a4",
]

# 🔹 AI / LLM stack
agents = [
    "langchain==1.2.3",
    "langchain-core==1.2.3",
    "langchain-openai>=1,<2",
    "langchain-ollama>=1,<2",
    "openai",
    "anthropic>=0.19.0",
    "openai-whisper",
    "sounddevice",
]

# 🔹 CPU inference (default safe option)
cpu = [
    "onnxruntime",
    "ctransformers==0.2.27",
]

# 🔹 Web / API
web = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "sse-starlette>=2.2.1",
]

# 🔹 Computer vision / perception
perception = [
    "ultralytics>=8.3.70",
    "transformers[torch]==4.49.0",
    "Pillow",
]

# 🔹 Robotics manipulation
manipulation = [
    "drake>=1.40.0",
    "pyrealsense2",
    "matplotlib>=3.7.1",
]

# 🔹 Unitree robots (heavy, includes full stack)
unitree = [
    "dimos[full]",
    "unitree-webrtc-connect-leshy>=2.0.7"
]

# 🔹 Developer tools
dev = [
    "pytest",
    "mypy",
    "ruff",
    "pre-commit",
]

# 🔹 AI convenience bundle
ai = [
    "dimos[agents,cpu]"
]

# 🔹 Recommended balanced setup
recommended = [
    "dimos[sim,agents,web,perception,visualization,cpu]"
]

# 🔹 Full stack (renamed from base)
full = [
    "dimos[agents,web,perception,visualization,sim]"
]

# -----------------------
# Tooling (unchanged essentials)
# -----------------------
[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["dimos"]
