[package]
name = "dimos-mappers"
version = "0.1.0"
edition = "2021"
description = "Native Rust ports of the go2 VoxelGridMapper and CostMapper for dimos"
license = "Apache-2.0"

[lib]
name = "dimos_mappers"
path = "src/lib.rs"

[[bin]]
name = "voxel_mapper"
path = "src/bin/voxel_mapper.rs"

[[bin]]
name = "cost_mapper"
path = "src/bin/cost_mapper.rs"

[dependencies]
dimos-module = { path = "../../../native/rust/dimos-module" }
lcm-msgs = { git = "https://github.com/dimensionalOS/dimos-lcm.git", branch = "rust-codegen" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
ahash = "0.8"
tracing = "0.1"
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
