[package]
name = "dimos-native-module"
version = "0.1.0"
edition = "2021"
description = "Rust native module SDK for dimos NativeModule framework"
license = "Apache-2.0"

[dependencies]
dimos-lcm = { git = "https://github.com/dimensionalOS/dimos-lcm.git", branch = "rust-codegen" }
dimos-native-module-macros = { version = "=0.1.0", path = "../dimos-native-module-macros" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
lcm-msgs = { git = "https://github.com/dimensionalOS/dimos-lcm.git", branch = "rust-codegen" }
