[package]
name = "wt-sidecar"
version = "0.1.0"
edition = "2021"
description = "Native QUIC/WebTransport egress for the dimoscope gateway — speaks the existing WT wire protocol, fed by gateway/pipe.py over a unix socket"

[dependencies]
wtransport = { version = "0.7", features = ["self-signed", "quinn"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
regex = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
