[package]
name = "wt-sidecar"
version = "0.1.0"
edition = "2021"
description = "Native egress sidecar for the dimoscope gateway — WebTransport (QUIC :8443) + WebRTC DataChannels (UDP :8444, muxed), fed by gateway/pipe.py over a unix socket"

[dependencies]
wtransport = { version = "0.7", features = ["self-signed", "quinn"] }
webrtc = "0.17"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
regex = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
