<?xml version="1.0"?>
<package format="3">
  <name>drdds_bridge</name>
  <version>0.1.0</version>
  <description>Bridge between drdds (DeepRobotics DDS) and ROS2 Humble for M20 lidar/IMU</description>
  <maintainer email="dev@dimos.ai">dimos</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
