<?xml version="1.0"?>
<package format="3">
  <name>drdds</name>
  <version>1.0.0</version>
  <description>DeepRobotics DDS message definitions for M20</description>
  <maintainer email="dev@dimensionalos.com">dimensionalOS</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
